# mul-ag-sample

./: deploy-agent
workshop/: README.md  mcp_gateway_deployment.json  pyproject.toml  test_langgraph_full.sh  test_strands_full.sh
workshop/modules/: .gitignore
workshop/modules/01/: agent.py
workshop/modules/02/langgraph/: agent.py  debug.py  server.py  test_server.py
workshop/modules/02/strands/: agent.py  server.py
workshop/modules/03/langgraph/: __init__.py  dataviz.py  dataviz.yml  example_usage.py
workshop/modules/03/strands/: __init__.py  dataviz.py  example_usage.py
workshop/modules/04/langgraph/: dataviz_agent.py  electrify_agent.py  electrify_prompt.md  electrify_server.py  orchestrator_agent.py  orchestrator_minimal.py  test_orchestrator.py
workshop/modules/04/strands/: dataviz_agent.py  electrify_agent.py  electrify_server.py  orchestrator_agent.py  orchestrator_minimal.py  test_orchestrator.py
workshop/modules/05/langgraph/: agentcore_runtime_adapter.py  dataviz_agent.py  dataviz_server.py  deploy_lambda.py  electrify_agent.py  electrify_prompt.md  orchestrator_agent.py  orchestrator_prompt.md  requirements.txt  test_gateway_auth.py  test_memory.py
workshop/modules/05/strands/: agentcore_runtime_adapter.py  dataviz_agent.py  deploy_gateway_simple.py  electrify_agent.py  electrify_server.py  orchestrator_agent.py  requirements.txt  (+1 more)
workshop/modules/06/: commands.md  deploy_policy.py  query_policy_logs.py  test_policy.py
workshop/webui/: .gitignore  Makefile  index.html  package-lock.json  package.json
workshop/webui/src/: main.jsx
(+53 files in other folders)
